# ei3

./: .gitignore  README.md  config.json  conversion.py  data_acquisition.py  main.py  package-lock.json  parse.py  pyproject.toml  requirements-for-python3.11.txt  requirements.txt  sensor.py  testing_http_limit.py  visualisation.py
data/: 2024-07-19_13-47-27.json  2024-07-19_13-47-32.json  2024-07-19_13-47-37.json  2024-07-19_13-47-46.json  2024-07-19_13-47-50.json  2024-07-19_13-47-55.json  2024-07-19_13-48-00.json  2024-07-19_13-48-05.json  2024-07-19_13-48-10.json  2024-07-19_13-48-35.json  2024-07-19_13-48-40.json  2024-07-19_13-48-45.json  2024-07-19_13-48-50.json  2024-07-19_13-48-55.json  2024-07-19_13-49-00.json  2024-07-19_13-51-17.json  2024-07-19_13-51-21.json  2024-07-19_13-51-26.json  2024-07-19_13-51-32.json  2024-07-19_13-51-38.json  2024-07-19_13-51-43.json  2024-07-19_13-53-44.json  2024-07-19_13-53-49.json  2024-07-19_13-53-53.json  2024-07-19_13-53-58.json  2024-07-19_13-55-32.json  2024-07-19_13-55-37.json  2024-07-19_13-55-42.json  2024-07-19_13-55-47.json  2024-07-19_13-55-52.json  2024-07-19_13-55-57.json  2024-07-19_13-56-03.json  2024-07-19_13-56-08.json  2024-07-19_13-56-13.json  2024-07-19_13-56-18.json  2024-07-19_13-56-24.json  2024-07-19_13-56-29.json  2024-07-19_14-11-59.json  2024-07-19_14-12-04.json  2024-07-19_14-12-09.json  (+4676 more)
model/: anomaly_detection.py  one_class_svm.py
python3.11/: pyvenv.cfg
sick_src/: conversion.py  data_acquisition.py  database.py  feature_processing.py  feature_selection.py  inference.py  sensor.py  (+1 more)
(+91 files in other folders)
