[project]
name = "SICK"
version = "0.1"

dependencies = ['certifi==2024.7.4', 'charset-normalizer==3.3.2', 'cycler==0.11.0', 'fonttools==4.38.0', 'idna==3.7', 'joblib==1.3.2', 'kiwisolver==1.4.5', 'matplotlib==3.5.3', 'numpy==1.21.6', 'packaging==24.0', 'pandas==1.3.5', 'Pillow==9.5.0', 'pkg_resources==0.0.0', 'pyparsing==3.1.2', 'python-dateutil==2.9.0.post0', 'pytz==2024.1', 'requests==2.31.0', 'scikit-learn==1.0.2', 'scipy==1.7.3', 'six==1.16.0', 'threadpoolctl==3.1.0', 'typing_extensions==4.7.1', 'urllib3==2.0.7']

[tool.setuptools]
packages = ["data", "model", "sick_src", "test", "web_app"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

